# M5Stack-Unit-CamS3-5MP

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  build.sh  build_v6.sh  check_fw.sh  coredump.elf  flash.sh  flashmon.sh  idf_env.sh  monitor.sh  partitions.csv  sdkconfig.defaults  setup_idf.sh  setup_idf_v6.sh  test_mjpeg_concurrency.py  test_stream_stress.py
.github/workflows/: build.yml
build_v5/: local_components_list.temp.yml
build_v5/log/: idf_py_stderr_output_4793  idf_py_stdout_output_4793
build_v5_nocm/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_args.in  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  otadata-flash_args  project_description.json  x509_crt_bundle.S
build_v5_nocm/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build_v5_nocm/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_v5_nocm/esp-idf/: cmake_install.cmake
components/http_server/: CMakeLists.txt  http_server.c
components/http_server/include/: http_server.h
components/mqtt_mgr/: CMakeLists.txt  mqtt_mgr.c
components/mqtt_mgr/include/: mqtt_mgr.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.bak  main.bak2  main.c  wifi.c  wifi.h  wifi_v6.c
(+188 files in other folders)
